--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-css": "~0.5.4"
+    "grunt-css": "~0.5.4",
+    "gulp": "^3.8.8",
+    "gulp-concat": "^2.4.1",
+    "gulp-minify-css": "^0.3.10",
+    "gulp-uglify": "^1.0.1"
   }
 }
